# spars

./: .gitignore  Makefile  README.md  benchmark.dockerfile
.github/workflows/: build.yml  release.yaml
bindings/python/: .gitignore  __init__.pyi  pyproject.toml  setup.cfg  setup.py
bindings/python/benchmarks/: cholesky.py  generate_data.py
bindings/python/spars/: __init__.py  _sparse_c.pyi  cholesky.py  csc.py  csr.py  spars_add.c  spars_cholesky.c  spars_cholesky.h  spars_csc.c  spars_csc.h  spars_csr.c  spars_csr.h  spars_module.c  spars_mul.c  spars_mul.h
bindings/python/sparsely/: __init__.py  __init__.pyi  _sparse_c.pyi  _sparse_cmodule.c  cholesky.py  csc.py  csr.py  lil.py  sparsely_add.c  sparsely_add.h  sparsely_cholesky.c  sparsely_csc.c  sparsely_csc.h  sparsely_csr.c  sparsely_csr.h  sparsely_module.c  sparsely_mul.c
bindings/python/tests/: matrices.py  test_add.py  test_cholesky.py  test_cholesky_lsqr.py  test_csc.py  test_csr.py  test_dot.py  test_lil.py  test_mul.py  test_transpose.py
include/spars/: add.h  alloc.h  blasphemy.h  cholesky.h  cholesky_solve.h  csr.h  dense.h  lsqr.h  mul.h  sort.h
include/sparsely/: add.h  alloc.h  blasphemy.h  cholesky.h  cholesky_factor.h  cholesky_solve.h  csc.h  csr.h  dense.h  lsqr.h  mul.h  sort.h
src/: add.c  alloc.c  blasphemy.c  cholesky.c  cholesky_solve.c  csc.c  csr.c  dense.c  lsqr.c  mul.c
