[build-system]
requires = ["setuptools>=61.0", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "spars"
dynamic = ["version"]
description = "Lightweight sparse matrix library"
readme = "README.md"
requires-python = ">=3.7"

authors = [
  { name = "Samuel Carlsson", email = "samuel.carlsson@gmail.com" }
]

dependencies = [
  "numpy",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "mypy",
  "types-setuptools",
]

[tool.setuptools]
packages = { find = {} }

[tool.setuptools.package-data]
"spars" = ["py.typed"]
